--- a/MauiBlazor/wwwroot/index.html
+++ b/MauiBlazor/wwwroot/index.html
@@ -7,6 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="css/css.css" rel="stylesheet" />
     <link href="MauiBlazor.styles.css" rel="stylesheet" />
 </head>
 
